Partial_14Dec2021/force-app/main/default/objects/Supply_Detail__c/Supply_Detail__c.object-meta.xml
<CustomObject>
    <label>Order and Supply Details</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order and Supply Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>