Partial_14Dec2021/force-app/main/default/objects/Supply_Detail__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Supply_Detail__c</referenceTo>
    <relationshipName>Supply_Details</relationshipName>
    <type>Lookup</type>
</CustomField>