Partial_14Dec2021/force-app/main/default/objects/Supply_Detail__c/fields/Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Value__c</fullName>
    <label>Invoice Value (Only Material)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>