Partial_14Dec2021/force-app/main/default/objects/Supply_Detail__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <label>Projects</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Supply_Details1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>