Partial_14Dec2021/force-app/main/default/objects/Supply_Detail__c/fields/Supply_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Supply_Quantity__c</fullName>
    <label>Supply Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>